# SCSAWorkflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.v1  Dockerfile.v2  LICENSE  Makefile  README.md  custom_plots.csv  environment.yml  output.h5ad  output.pickle  plots.csv  pyproject.toml  setup.py  spac-0.3.1-py38_0.tar.bz2  spac-0.3.2-py38_0.tar.bz2  spac-0.3.3-py38_0.tar.bz2  spac-0.3.5-py38_0.tar.bz2  spac-0.7.0-py38_0.tar.bz2  spac-0.8.0-py39_0.tar.bz2  spac-0.8.2-py39_0.tar.bz2  spac-0.9.0-py39_0.tar.bz2  spac-0.9.1-py39_0.tar.bz2  spac-0.9.2-py39_0.tar.bz2  spac-0.9.3-py39_0.tar.bz2  spac-dev-0.3.1-py38_0.tar.bz2  spac-dev-0.3.2-py38_0.tar.bz2  spac-dev-0.3.3-py38_0.tar.bz2  spac-dev-0.3.4-py38_0.tar.bz2  spac-dev-0.3.5-py38_0.tar.bz2  spac-dev-0.3.6-py38_0.tar.bz2  spac-dev-0.4.0-py38_0.tar.bz2  spac-dev-0.4.1-py38_0.tar.bz2  spac-dev-0.4.2-py38_0.tar.bz2  spac-dev-0.4.3-py38_0.tar.bz2  spac-dev-0.4.4-py38_0.tar.bz2  spac-dev-0.4.5-py38_0.tar.bz2  spac-dev-0.5.0-py38_0.tar.bz2  (+53 more)
.ipynb_checkpoints/: environment-checkpoint.yml
Conda_Recipe/: meta.yaml
docker/: Dockerfile.dev  README.md  docker-compose.dev.yml
docs/: .nojekyll  genindex.html  index.html  leiden_clustering_docs.ipynb  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spac.html
examples/: ripley_l_params.json  test_script.py
galaxy_tools/: README.md  galaxy_xml_synthesizer.py  run_spac_template.sh  tool_utils.py
notebooks/: test_datashader_2D_scatter_light.ipynb
paper/: figure.pptx  figure.tif  paper.bib  paper.md  paper_edit.md  (+2 more)
(+1118 files in other folders)
